--- a/public/styles.css
+++ b/public/styles.css
@@ -1,3 +1,56 @@
-.welcome-page {
-    background-color: rgb(148, 235, 247);
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+body {
+    background: url(./assets/background-img2.jpg) no-repeat center center;
+}
+button {
+    padding: 0.3rem 1rem;
+    margin-top: 5px;
+    text-decoration: none;
+    background: #12b912;
+    color: #fff;
+    cursor: pointer;
+    font-size: 1rem;
+    width: 200px;
+    transition: background 250ms ease-in-out, transform 150ms ease;
+    border-radius: 5px;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+}
+.landing-page {
+    /* display: flex; */
+    /* justify-content: center; */
+}
+.landing-image-wrapper {
+    width: 400px;
+    height: auto;
+}
+#landing-image {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.header {
+    width: auto;
+    height: 150px;
+    border: 2px solid blue;
+}
+.header-image {
+    display: inline-block;
+    max-width: 100%;
+    max-height: 100%;
+}
+.header-title {
+    display: inline;
+}
+.form {
+    display: flex;
+    flex-direction: column;
+}
+
+.form > input {
+    width: 200px;
 }
