--- a/public/styles.css
+++ b/public/styles.css
@@ -4,7 +4,13 @@
     box-sizing: border-box;
 }
 body {
-    background: url(./assets/background-img2.jpg) no-repeat center center;
+    background: url(./assets/background-img.jpg) no-repeat center center;
+    display: flex;
+    /* height: 100vh; */
+    align-items: center;
+}
+main {
+    margin: 0 auto;
 }
 button {
     padding: 0.3rem 1rem;
