--- a/public/styles.css
+++ b/public/styles.css
@@ -16,6 +16,7 @@ main {
 }
 
 .wrapper {
+    padding: 1.5rem;
     width: 60vw;
     height: 70vh;
     margin: 3rem auto 0;
@@ -74,11 +75,14 @@ input {
 }
 .profile {
     display: flex;
+    justify-content: space-evenly;
 }
 .profile-wrapper {
-    margin-left: 2rem;
+    /* margin-left: 2rem; */
 }
-
+.profile-welcome {
+    font-size: 3.2vw;
+}
 .profile img {
     width: 200px;
     height: 250px;
@@ -91,9 +95,23 @@ input {
 .to-editor-link:hover {
     color: #7e48ca;
 }
+.bio-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+    height: 85%;
+    background: whitesmoke;
+}
+.bio-area {
+    flex-grow: 2;
+}
 textarea {
-    width: 300px;
+    width: 80%;
     height: 150px;
+    font-size: 1.15rem;
+    padding: 0.5rem 0.8rem;
+    color: #7e48ca;
 }
 
 .upload-modal {
