--- a/public/styles.css
+++ b/public/styles.css
@@ -78,7 +78,7 @@ input {
     justify-content: space-evenly;
 }
 .profile-wrapper {
-    /* margin-left: 2rem; */
+    max-width: 50%;
 }
 .profile-welcome {
     font-size: 3.2vw;
@@ -102,6 +102,9 @@ input {
     width: 100%;
     height: 85%;
     background: whitesmoke;
+    border-radius: 2px;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
+    padding: 0.3rem 0.6rem;
 }
 .bio-area {
     flex-grow: 2;
@@ -115,6 +118,18 @@ textarea {
 }
 
 .upload-modal {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 80%;
+    height: 65%;
+    position: absolute;
+    top: 27%;
+    left: 10%;
+    background: #f1f0f3;
+}
+.bio-editor-modal {
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
