--- a/public/styles.css
+++ b/public/styles.css
@@ -81,7 +81,7 @@ input {
     max-width: 50%;
 }
 .profile-welcome {
-    font-size: 3.2vw;
+    font-size: 2.6vw;
 }
 .profile img {
     width: 200px;
@@ -95,12 +95,15 @@ input {
 .to-editor-link:hover {
     color: #7e48ca;
 }
+.about-padding {
+    padding: 0.1rem 0.6rem;
+}
 .bio-container {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     width: 100%;
-    height: 85%;
+    /* height: 85%; */
     background: whitesmoke;
     border-radius: 2px;
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
