--- a/public/styles.css
+++ b/public/styles.css
@@ -53,15 +53,21 @@ label {
     padding-left: 10px;
 }
 .landing-flexcontainer {
-    display: flex;
-    /* flex-direction: column;
-    align-items: center; */
-    border: 2px solid blue;
+    text-align: center;
+    align-items: center;
+    /* border: 2px solid blue; */
     margin: 0 auto;
     height: 100%;
     align-items: center;
     width: 80%;
 }
+
+@media (min-width: 650px) {
+    .landing-flexcontainer {
+        display: flex;
+    }
+}
+
 .landing-imgage-container {
     width: 200px;
     height: 200px;
@@ -71,6 +77,9 @@ label {
     padding-top: 2rem;
     max-width: 100%;
     max-height: 100%;
+}
+.svg-logo {
+    fill: rgb(211, 62, 186);
 }
 
 @keyframes wale-logo-float {
@@ -86,7 +95,18 @@ label {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-content: center;
     margin: 0 auto;
+}
+
+@media (max-width: 648px) {
+    .registration-form {
+        /* display: flex; */
+        /* flex-direction: column; */
+        /* justify-content: center; */
+        align-items: inherit;
+        /* margin: 0 auto; */
+    }
 }
 .register-btn {
     align-self: center;
@@ -96,6 +116,9 @@ label {
     font-size: 0.8rem;
     margin-top: 15px;
     align-self: center;
+}
+.login-form {
+    align-items: inherit;
 }
 
 .header {
@@ -108,10 +131,6 @@ label {
 }
 .header-logo-container {
     width: 270px;
-    /* position: absolute;
-    top: -4px;
-    left: 10px;
- */
 }
 .header-pic-container {
     width: 60px;
@@ -123,7 +142,6 @@ label {
     width: 50px;
     object-fit: cover;
     cursor: pointer;
-    /* padding-top: 22px; */
 }
 .header #header-logo {
     width: 230px;
