--- a/public/styles.css
+++ b/public/styles.css
@@ -10,6 +10,7 @@ body {
     align-items: center;
     color: #9c79cc;
     padding: 10px;
+    overflow: hidden;
 }
 main {
     margin: 0 auto;
@@ -33,7 +34,7 @@ button {
     color: #fff;
     cursor: pointer;
     font-size: 1rem;
-    width: 200px;
+    /* width: 200px; */
     transition: background 250ms ease-in-out, transform 150ms ease;
     border-radius: 5px;
     -webkit-appearance: none;
@@ -46,17 +47,25 @@ button:hover {
 input {
     width: 250px;
     border-radius: 20px;
-    height: 30px;
+    height: 35px;
+    padding-left: 0.7rem;
+    font-size: 1rem;
 }
 label {
     margin-top: 10px;
     padding-left: 10px;
+    text-align: left;
 }
+label:after {
+    content: "*";
+    color: rgb(76, 216, 111);
+}
+
 .landing-flexcontainer {
     text-align: center;
-    align-items: center;
+    /* align-items: center; */
     /* border: 2px solid blue; */
-    margin: 0 auto;
+    margin: 4rem auto;
     height: 100%;
     align-items: center;
     width: 80%;
@@ -72,11 +81,16 @@ label {
     width: 200px;
     height: 200px;
 }
+.logo-text {
+    width: 57%;
+    height: auto;
+}
 .logo-image {
-    animation: wale-logo-float infinite 3s alternate;
+    animation: wale-logo-float infinite 2s alternate;
     padding-top: 2rem;
-    max-width: 100%;
-    max-height: 100%;
+    /* max-width: 100%; */
+    /* max-height: 100%; */
+    width: 63%;
 }
 .svg-logo {
     fill: rgb(211, 62, 186);
@@ -94,8 +108,8 @@ label {
 .registration-form {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-content: center;
+    /* justify-content: center;
+    align-content: center; */
     margin: 0 auto;
 }
 
@@ -111,6 +125,9 @@ label {
 .register-btn {
     align-self: center;
     margin-top: 20px;
+    width: 15.625rem;
+    height: 2.5rem;
+    font-size: 1.3rem;
 }
 .login-offer {
     font-size: 0.8rem;
@@ -119,6 +136,15 @@ label {
 }
 .login-form {
     align-items: inherit;
+}
+.login-btn {
+    margin-top: 20px;
+    height: 2.5rem;
+}
+.register-offer {
+    font-size: 0.8rem;
+    text-align: right;
+    margin-top: 10px;
 }
 
 .header {
