--- a/public/styles.css
+++ b/public/styles.css
@@ -248,3 +248,14 @@ textarea {
     left: 10%;
     background: #f1f0f3;
 }
+.wannabe-container {
+    display: inline-block;
+    /* margin-right: 1.5rem; */
+    /* margin-bottom: 2.25rem; */
+    margin: 0 1.5rem 2.25rem 0;
+}
+.wannabe-img {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+}
