--- a/public/styles.css
+++ b/public/styles.css
@@ -60,6 +60,9 @@ label:after {
     content: "*";
     color: rgb(76, 216, 111);
 }
+a {
+    text-decoration: none;
+}
 
 .landing-flexcontainer {
     text-align: center;
@@ -149,14 +152,24 @@ label:after {
 
 .header {
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
+    ustify-content: flex-end;
     width: 100vw;
     height: 60px;
     padding: 0 30px;
     border-bottom: 1px solid #9c79cc;
 }
 .header-logo-container {
-    width: 270px;
+    flex-grow: 2;
+    width: 43%;
+    /* width: 270px; */
+}
+.nav-bar {
+    display: flex;
+    align-items: flex-end;
+    margin-right: 1rem;
+    width: 20%;
+    justify-content: space-around;
 }
 .header-pic-container {
     width: 60px;
@@ -165,13 +178,17 @@ label:after {
 }
 
 .header img {
-    width: 50px;
+    border-radius: 10%;
+    width: 65%;
+    /* width: 50px; */
     max-height: 57px;
     object-fit: contain;
     cursor: pointer;
 }
+
 .header #header-logo {
     width: 230px;
+    /* border-radius: none; */
 }
 .profile {
     display: flex;
@@ -186,9 +203,18 @@ label:after {
 .profile-welcome {
     font-size: 2.6vw;
 }
+.profile-img-container {
+    margin-right: 2rem;
+    width: 70%;
+    max-width: 270px;
+    /* width: 200px; */
+    /* height: 250px; */
+}
 .profile img {
-    width: 200px;
-    height: 250px;
+    width: 100%;
+    height: auto;
+    /* width: 200px; */
+    /* height: 250px; */
     object-fit: cover;
     cursor: pointer;
 }
