--- a/public/styles.css
+++ b/public/styles.css
@@ -63,6 +63,9 @@ label:after {
 a {
     text-decoration: none;
 }
+.capitalize {
+    text-transform: capitalize;
+}
 
 .landing-flexcontainer {
     text-align: center;
@@ -111,18 +114,13 @@ a {
 .registration-form {
     display: flex;
     flex-direction: column;
-    /* justify-content: center;
-    align-content: center; */
+
     margin: 0 auto;
 }
 
 @media (max-width: 648px) {
     .registration-form {
-        /* display: flex; */
-        /* flex-direction: column; */
-        /* justify-content: center; */
         align-items: inherit;
-        /* margin: 0 auto; */
     }
 }
 .register-btn {
@@ -153,7 +151,7 @@ a {
 .header {
     display: flex;
     /* justify-content: space-between; */
-    ustify-content: flex-end;
+    /* justify-content: flex-end; */
     width: 100vw;
     height: 60px;
     padding: 0 30px;
@@ -161,25 +159,30 @@ a {
 }
 .header-logo-container {
     flex-grow: 2;
-    width: 43%;
+    /* width: 43%; */
     /* width: 270px; */
 }
 .nav-bar {
     display: flex;
     align-items: flex-end;
     margin-right: 1rem;
-    width: 20%;
+    width: 25%;
     justify-content: space-around;
+    border: 2px solid green;
 }
 .header-pic-container {
-    width: 60px;
-    height: 60px;
+    width: 40px;
+    height: 40px;
+
+    /* width: 65%; */
     /* float: right; */
 }
+.header-pic-container img {
+    width: 100%;
+    border-radius: 50%;
+}
 
-.header img {
-    border-radius: 10%;
-    width: 65%;
+#header-img {
     /* width: 50px; */
     max-height: 57px;
     object-fit: contain;
@@ -187,25 +190,37 @@ a {
 }
 
 .header #header-logo {
-    width: 230px;
+    /* width: 230px; */
     /* border-radius: none; */
+    border-radius: 10%;
+    width: 28%;
+    padding-top: 10px;
+    /* width: 50px; */
+    max-height: 57px;
+    object-fit: contain;
+    cursor: pointer;
 }
 .profile {
+    flex-direction: column;
+    height: 90vh;
+    width: 21%;
     display: flex;
-    justify-content: space-evenly;
+    border: 2px solid blue;
+    /* justify-content: space-evenly; */
 }
 .img-btn-wrapper {
     max-width: 40%;
 }
 .profile-wrapper {
     max-width: 60%;
+    padding-left: 1.25rem;
 }
 .profile-welcome {
     font-size: 2.6vw;
 }
 .profile-img-container {
-    margin-right: 2rem;
-    width: 70%;
+    /* margin-right: 2rem; */
+    width: 100%;
     max-width: 270px;
     max-height: 250px;
     overflow: hidden;
@@ -227,30 +242,37 @@ a {
 .to-editor-link:hover {
     color: #7e48ca;
 }
-.about-padding {
-    padding: 0.1rem 0.6rem;
+.edit-btn {
+    text-decoration: underline;
+    cursor: pointer;
 }
+
 .bio-container {
+    padding-left: 1.25rem;
     /* display: flex; */
     /* flex-direction: column; */
     /* justify-content: space-between; */
-    width: 60%;
+    /* width: 60%; */
     /* height: 85%; */
-    background: whitesmoke;
+    /* background: whitesmoke; */
     border-radius: 2px;
-    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
-    padding: 0.3rem 0.6rem;
+    /* box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3); */
+    /* padding: 0.3rem 0.6rem; */
 }
 .bio-area {
     flex-grow: 2;
 }
-/* textarea {
-    width: 80%;
-    height: 150px;
+
+.bio-text {
+    /* padding-left: 0.7rem; */
+}
+textarea {
+    /* width: 80%; */
+    /* height: 150px; */
     font-size: 1.15rem;
-    padding: 0.5rem 0.8rem;
+    /* padding: 0.5rem 0.8rem; */
     color: #7e48ca;
-} */
+}
 
 .upload-modal {
     display: flex;
