--- a/public/styles.css
+++ b/public/styles.css
@@ -177,6 +177,7 @@ a {
     /* border: 2px solid green; */
 }
 .header-pic-container {
+    overflow: hidden;
     width: 40px;
     height: 40px;
 
@@ -283,7 +284,8 @@ a {
 textarea {
     /* width: 80%; */
     /* height: 150px; */
-    font-size: 1.15rem;
+    margin-top: 10px;
+    font-size: 0.8rem;
     /* padding: 0.5rem 0.8rem; */
     color: #7e48ca;
 }
