--- a/public/styles.css
+++ b/public/styles.css
@@ -253,6 +253,27 @@ a {
     cursor: pointer;
 }
 
+/* OTHER PROFILE */
+.other-profile {
+    display: flex;
+    justify-content: space-evenly;
+}
+.other-img-btn-wrapper {
+    max-width: 40%;
+}
+.other-profile-wrapper {
+    max-width: 60%;
+}
+.other-profile-welcome {
+    font-size: 2.6vw;
+}
+.other-profile img {
+    width: 200px;
+    height: 250px;
+    object-fit: cover;
+    cursor: pointer;
+}
+
 /* BIOEDITOR */
 
 .to-editor-link {
@@ -339,8 +360,7 @@ textarea {
     margin-right: 50px;
     width: 12%;
     float: right;
-    box-shadow: 10px 0 10px rgba(0,0,0,.2),
-                -10px 0 10px rgba(0,0,0,.2);
+    box-shadow: 10px 0 10px rgba(0, 0, 0, 0.2), -10px 0 10px rgba(0, 0, 0, 0.2);
     /* border: 2px solid blue; */
 }
 .list-online-users::before {
@@ -351,11 +371,10 @@ textarea {
 .online-user-card {
     display: flex;
     flex-direction: column;
-    margin-top: .8rem;
+    margin-top: 0.8rem;
     /* align-items: center; */
     /* border: 2px solid green; */
 }
-
 
 .card-image-container {
     align-self: center;
@@ -371,8 +390,7 @@ textarea {
     /* width: 100%; */
     /* border-radius: 50%; */
 }
-.card-text{
-   
+.card-text {
 }
 .circle {
     float: left;
@@ -383,4 +401,3 @@ textarea {
     display: inline-block;
     margin-right: 7px;
 }
-
