--- a/public/styles.css
+++ b/public/styles.css
@@ -31,7 +31,8 @@ button {
     padding: 0.3rem 1rem;
     margin-top: 5px;
     text-decoration: none;
-    background: #12b912;
+    background: #c8eabd;
+    /* background: #12b912; */
     color: #fff;
     cursor: pointer;
     font-size: 1rem;
@@ -97,8 +98,7 @@ a {
 .logo-image {
     animation: wale-logo-float infinite 2s alternate;
     padding-top: 2rem;
-    /* max-width: 100%; */
-    /* max-height: 100%; */
+ 
     width: 63%;
 }
 .svg-logo {
@@ -157,8 +157,7 @@ a {
 
 .header {
     display: flex;
-    /* justify-content: space-between; */
-    /* justify-content: flex-end; */
+   
     width: 100vw;
     height: 60px;
     padding: 0 30px;
@@ -166,8 +165,7 @@ a {
 }
 .header-logo-container {
     flex-grow: 2;
-    /* width: 43%; */
-    /* width: 270px; */
+ 
 }
 .nav-bar {
     display: flex;
@@ -177,13 +175,23 @@ a {
     justify-content: space-around;
     /* border: 2px solid green; */
 }
+.link {
+    color: rgb(108, 50, 189);
+    cursor: pointer;
+    transition: all 0.4s ease-out;
+}
+.link:hover {
+    background: rgb(219, 217, 217);
+    transform: scale(1.1);
+   
+    border-radius: 5px;
+}
 .header-pic-container {
     overflow: hidden;
     width: 40px;
     height: 40px;
 
-    /* width: 65%; */
-    /* float: right; */
+  
 }
 .header-pic-container img {
     width: 40px;
@@ -202,12 +210,11 @@ a {
 }
 
 .header #header-logo {
-    /* width: 230px; */
-    /* border-radius: none; */
+    
     border-radius: 10%;
     width: 28%;
     padding-top: 10px;
-    /* width: 50px; */
+    
     max-height: 57px;
     object-fit: contain;
     cursor: pointer;
@@ -222,8 +229,7 @@ a {
     width: 21%;
     display: flex;
     box-shadow: 10px 0 10px rgba(0, 0, 0, 0.2);
-    /* border: 2px solid blue; */
-    /* justify-content: space-evenly; */
+   
 }
 .img-btn-wrapper {
     max-width: 40%;
@@ -236,19 +242,17 @@ a {
     font-size: 2.6vw;
 }
 .profile-img-container {
-    /* margin-right: 2rem; */
+   
     width: 100%;
     max-width: 270px;
     max-height: 250px;
     overflow: hidden;
-    /* width: 200px; */
-    /* height: 250px; */
+    
 }
 .profile img {
     width: 100%;
     height: auto;
-    /* width: 200px; */
-    /* height: 250px; */
+    
     object-fit: cover;
     cursor: pointer;
 }
@@ -290,29 +294,22 @@ a {
 
 .bio-container {
     padding-left: 1.25rem;
-    /* display: flex; */
-    /* flex-direction: column; */
-    /* justify-content: space-between; */
-    /* width: 60%; */
-    /* height: 85%; */
-    /* background: whitesmoke; */
+    
     border-radius: 2px;
-    /* box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3); */
-    /* padding: 0.3rem 0.6rem; */
+    
 }
 .bio-area {
     flex-grow: 2;
 }
 
 .bio-text {
-    /* padding-left: 0.7rem; */
+   */
 }
 textarea {
-    /* width: 80%; */
-    /* height: 150px; */
+    
     margin-top: 10px;
     font-size: 0.8rem;
-    /* padding: 0.5rem 0.8rem; */
+  
     color: #7e48ca;
 }
 
@@ -330,22 +327,10 @@ textarea {
     left: 10%;
     background: #f1f0f3;
 }
-/* .bio-editor-modal {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    width: 80%;
-    height: 65%;
-    position: absolute;
-    top: 27%;
-    left: 10%;
-    background: #f1f0f3;
-} */
+
 .wannabe-container {
     display: inline-block;
-    /* margin-right: 1.5rem; */
-    /* margin-bottom: 2.25rem; */
+    
     margin: 0 1.5rem 2.25rem 0;
 }
 .wannabe-img {
@@ -356,6 +341,8 @@ textarea {
 
 /* ONLINE-USERS */
 .list-online-users {
+    position: relative;
+    top: -370px;
     text-align: center;
     margin-right: 50px;
     width: 12%;
@@ -404,16 +391,33 @@ textarea {
 
 /* CHAT */
 .chat-window {
+    /* overflow: hidden; */
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
     margin: 0 auto;
     max-width: 33rem;
-    height: 20rem;
+    min-height: 20rem;
     border: 2px solid rgb(168, 163, 163);
     border-radius: 10px;
 }
 .chat-textarea {
     width: 100%;
     padding: 0.5rem;
+}
+.message-container {
+    display: flex;
+    padding: 0.5rem;
+}
+.chat-image {
+    margin-right: 0.7rem;
+    width: 40px;
+    height: 40px;
+}
+.chat-sender-info {
+    color: red;
+}
+.sender-info-flex {
+    display: flex;
+    flex-direction: column;
 }
