--- a/public/styles.css
+++ b/public/styles.css
@@ -31,8 +31,8 @@ button {
     padding: 0.3rem 1rem;
     margin-top: 5px;
     text-decoration: none;
-    background: #c8eabd;
-    /* background: #12b912; */
+    /* background: #c8eabd; */
+    background: #12b912;
     color: #fff;
     cursor: pointer;
     font-size: 1rem;
@@ -98,7 +98,7 @@ a {
 .logo-image {
     animation: wale-logo-float infinite 2s alternate;
     padding-top: 2rem;
- 
+
     width: 63%;
 }
 .svg-logo {
@@ -157,7 +157,7 @@ a {
 
 .header {
     display: flex;
-   
+
     width: 100vw;
     height: 60px;
     padding: 0 30px;
@@ -165,7 +165,6 @@ a {
 }
 .header-logo-container {
     flex-grow: 2;
- 
 }
 .nav-bar {
     display: flex;
@@ -183,15 +182,13 @@ a {
 .link:hover {
     background: rgb(219, 217, 217);
     transform: scale(1.1);
-   
+
     border-radius: 5px;
 }
 .header-pic-container {
     overflow: hidden;
     width: 40px;
     height: 40px;
-
-  
 }
 .header-pic-container img {
     width: 40px;
@@ -210,11 +207,10 @@ a {
 }
 
 .header #header-logo {
-    
     border-radius: 10%;
     width: 28%;
     padding-top: 10px;
-    
+
     max-height: 57px;
     object-fit: contain;
     cursor: pointer;
@@ -229,7 +225,6 @@ a {
     width: 21%;
     display: flex;
     box-shadow: 10px 0 10px rgba(0, 0, 0, 0.2);
-   
 }
 .img-btn-wrapper {
     max-width: 40%;
@@ -242,17 +237,15 @@ a {
     font-size: 2.6vw;
 }
 .profile-img-container {
-   
     width: 100%;
     max-width: 270px;
     max-height: 250px;
     overflow: hidden;
-    
 }
 .profile img {
     width: 100%;
     height: auto;
-    
+
     object-fit: cover;
     cursor: pointer;
 }
@@ -294,22 +287,19 @@ a {
 
 .bio-container {
     padding-left: 1.25rem;
-    
+
     border-radius: 2px;
-    
 }
 .bio-area {
     flex-grow: 2;
 }
 
 .bio-text {
-   */
 }
 textarea {
-    
     margin-top: 10px;
     font-size: 0.8rem;
-  
+
     color: #7e48ca;
 }
 
@@ -328,9 +318,16 @@ textarea {
     background: #f1f0f3;
 }
 
+/* FRIENDS */
+
+.friends-wrapper {
+    width: 70%;
+    margin: 0 auto;
+}
+
 .wannabe-container {
     display: inline-block;
-    
+
     margin: 0 1.5rem 2.25rem 0;
 }
 .wannabe-img {
@@ -390,20 +387,36 @@ textarea {
 }
 
 /* CHAT */
+.chat-heading {
+    text-align: center;
+}
+.chat-wrapper {
+    width: 46%;
+    margin: 0 auto;
+
+    /* border: 1px solid blue; */
+}
 .chat-window {
+    /* overflow: auto; */
+    overflow-y: scroll;
+    justify-content: start;
     /* overflow: hidden; */
     display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
+    /* flex-direction: column; */
     margin: 0 auto;
-    max-width: 33rem;
-    min-height: 20rem;
+    /* max-width: 33rem; */
+    max-height: 300px;
     border: 2px solid rgb(168, 163, 163);
     border-radius: 10px;
+    box-shadow: 10px 0 10px rgba(0, 0, 0, 0.2), -10px 0 10px rgba(0, 0, 0, 0.2);
 }
 .chat-textarea {
+    margin: 0 auto;
     width: 100%;
     padding: 0.5rem;
+    border-radius: 10px;
+    border: 2px solid rgb(168, 163, 163);
+    box-shadow: 10px 0 10px rgba(0, 0, 0, 0.2), -10px 0 10px rgba(0, 0, 0, 0.2);
 }
 .message-container {
     display: flex;
@@ -411,7 +424,7 @@ textarea {
 }
 .chat-image {
     margin-right: 0.7rem;
-    width: 40px;
+    /* width: 40px; */
     height: 40px;
 }
 .chat-sender-info {
