--- a/public/styles.css
+++ b/public/styles.css
@@ -10,7 +10,8 @@ body {
     /* height: 100vh; */
     align-items: center;
     color: #9c79cc;
-    padding: 10px;
+    /* padding: 10px; */
+    margin: 0;
     /* overflow: hidden; */
 }
 main {
@@ -32,7 +33,9 @@ button {
     margin-top: 5px;
     text-decoration: none;
     /* background: #c8eabd; */
-    background: #12b912;
+    /* background: #12b912; */
+
+    background: #ff9e0d;
     color: #fff;
     cursor: pointer;
     font-size: 1rem;
@@ -157,12 +160,27 @@ a {
 /* HEADER */
 
 .header {
-    display: flex;
+    background-image: linear-gradient(
+        to right,
+        #ffffff,
+        #fcfbff,
+        #f9f8fe,
+        #f7f4fe,
+        #f5f0fd,
+        #e8ddf8,
+        #dbcaf3,
+        #ceb7ee,
+        #b391e3,
+        #986bd7,
+        #7c45ca,
+        #5c15bc
+    );
 
+    display: flex;
     width: 100vw;
-    height: 60px;
+    height: 45px;
     padding: 0 30px;
-    border-bottom: 1px solid #9c79cc;
+    /* border-bottom: 1px solid #9c79cc; */
 }
 .header-logo-container {
     flex-grow: 2;
@@ -171,17 +189,19 @@ a {
     display: flex;
     align-items: flex-end;
     margin-right: 1rem;
-    width: 35%;
+    width: 65%;
     justify-content: space-around;
     /* border: 2px solid green; */
 }
 .link {
-    color: rgb(108, 50, 189);
+    /* color: rgb(108, 50, 189); */
+    color: #fff;
     cursor: pointer;
     transition: all 0.4s ease-out;
 }
 .link:hover {
     background: rgb(219, 217, 217);
+    color: rgb(103, 59, 165);
     transform: scale(1.1);
 
     border-radius: 5px;
@@ -221,6 +241,7 @@ a {
 .flex-wrapper {
     display: flex;
     margin-top: 1.8rem;
+    padding-left: 3rem;
 }
 .profile {
     margin-top: 1.8rem;
@@ -288,10 +309,12 @@ a {
 .edit-btn {
     text-decoration: underline;
     cursor: pointer;
-    color: #12b912;
+    /* color: #12b912; */
+    color: #ff9e0d;
 }
 .edit-btn:hover {
-    color: #435466;
+    /* color: #435466; */
+    color: #7e48ca;
 }
 
 .bio-container {
@@ -331,18 +354,26 @@ textarea {
 
 .friends-wrapper {
     width: 70%;
-    margin: 0 auto;
+    margin: 3rem auto;
 }
 
 .wannabe-container {
     display: inline-block;
 
-    margin: 0 1.5rem 2.25rem 0;
+    margin: 1rem 1.5rem 2.25rem 0;
 }
 .wannabe-img {
     width: 100px;
     height: 100px;
     object-fit: cover;
+}
+.no-friends {
+    margin: 7rem auto;
+    width: 18%;
+    height: 20%;
+}
+.sad-uniwale {
+    width: 165px;
 }
 
 /* ONLINE-USERS */
@@ -363,13 +394,18 @@ textarea {
     content: "ONLINE NOW";
     text-align: center;
 }
+.nobody-online {
+    float: right;
+    position: absolute;
+    top: 150px;
+    right: 0;
+    margin: 3rem;
+}
 
 .online-user-card {
     display: flex;
     flex-direction: column;
     margin-top: 0.8rem;
-    /* align-items: center; */
-    /* border: 2px solid green; */
 }
 
 .card-image-container {
@@ -383,19 +419,6 @@ textarea {
     width: 50px;
     height: 50px;
     object-fit: cover;
-    /* width: 100%; */
-    /* border-radius: 50%; */
-}
-.card-text {
-}
-.circle {
-    float: left;
-    width: 10px;
-    height: 10px;
-    background-color: #12b912;
-    border-radius: 50%;
-    display: inline-block;
-    margin-right: 7px;
 }
 
 /* CHAT */
@@ -405,8 +428,6 @@ textarea {
 .chat-wrapper {
     width: 46%;
     margin: 0 auto;
-
-    /* border: 1px solid blue; */
 }
 .chat-window {
     /* overflow: auto; */
@@ -450,7 +471,7 @@ textarea {
 /* WALL */
 .feeds-container {
     margin-top: 1.8rem;
-    height: 618px;
+
     width: 45%;
     margin-left: 7.5rem;
     /* background: #c486b6; */
