--- a/public/styles.css
+++ b/public/styles.css
@@ -4,15 +4,10 @@
     box-sizing: border-box;
 }
 body {
-    /* background: url(./assets/background-img.jpg) no-repeat center center; */
     display: flex;
-
-    /* height: 100vh; */
     align-items: center;
     color: #9c79cc;
-    /* padding: 10px; */
     margin: 0;
-    /* overflow: hidden; */
 }
 main {
     margin: 0 auto;
@@ -32,14 +27,10 @@ button {
     padding: 0.3rem 1rem;
     margin-top: 5px;
     text-decoration: none;
-    /* background: #c8eabd; */
-    background: #12b912;
-
-    /* background: #ff9e0d; */
+    background: #c631cc;
     color: #fff;
     cursor: pointer;
     font-size: 1rem;
-    /* width: 200px; */
     transition: background 250ms ease-in-out, transform 150ms ease;
     border-radius: 5px;
     -webkit-appearance: none;
@@ -77,8 +68,6 @@ a {
 
 .landing-flexcontainer {
     text-align: center;
-    /* align-items: center; */
-    /* border: 2px solid blue; */
     margin: 4rem auto;
     height: 100%;
     align-items: center;
@@ -180,7 +169,6 @@ a {
     width: 100vw;
     height: 45px;
     padding: 0 30px;
-    /* border-bottom: 1px solid #9c79cc; */
 }
 .header-logo-container {
     flex-grow: 2;
@@ -191,10 +179,8 @@ a {
     margin-right: 1rem;
     width: 65%;
     justify-content: space-around;
-    /* border: 2px solid green; */
 }
 .link {
-    /* color: rgb(108, 50, 189); */
     color: #fff;
     cursor: pointer;
     transition: all 0.4s ease-out;
@@ -203,7 +189,6 @@ a {
     background: rgb(219, 217, 217);
     color: rgb(103, 59, 165);
     transform: scale(1.1);
-
     border-radius: 5px;
 }
 .header-pic-container {
@@ -215,13 +200,11 @@ a {
     width: 40px;
     height: 40px;
     object-fit: cover;
-    /* width: 100%; */
     border-radius: 50%;
     cursor: pointer;
 }
 
 #header-img {
-    /* width: 50px; */
     max-height: 57px;
     object-fit: contain;
     cursor: pointer;
@@ -231,7 +214,6 @@ a {
     border-radius: 10%;
     width: 28%;
     padding-top: 10px;
-
     max-height: 57px;
     object-fit: contain;
     cursor: pointer;
@@ -313,12 +295,11 @@ a {
 .edit-btn {
     text-decoration: underline;
     cursor: pointer;
-    /* color: #12b912; */
-    color: #ff9e0d;
+    color: #c631cc;
 }
 .edit-btn:hover {
-    /* color: #435466; */
-    color: #7e48ca;
+    color: #435466;
+    /* color: #7e48ca; */
 }
 
 .bio-container {
@@ -330,8 +311,6 @@ a {
     flex-grow: 2;
 }
 
-.bio-text {
-}
 textarea {
     margin-top: 10px;
     font-size: 0.8rem;
@@ -346,11 +325,12 @@ textarea {
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    width: 80%;
-    height: 65%;
+    width: 50%;
+    height: 45%;
     position: absolute;
     top: 27%;
-    left: 10%;
+    left: 30%;
+    border-radius: 10px;
     background: #f1f0f3;
 }
 
@@ -359,6 +339,8 @@ textarea {
 .friends-wrapper {
     width: 70%;
     margin: 3rem auto;
+    display: flex;
+    flex-direction: column;
 }
 
 .wannabe-container {
@@ -373,7 +355,6 @@ textarea {
     object-position: top;
 }
 .no-friends {
-    margin: 7rem auto;
     width: 18%;
     height: 20%;
 }
@@ -386,14 +367,11 @@ textarea {
     position: absolute;
     top: 128px;
     right: 0;
-    /* position: relative; */
-    /* top: -370px; */
     text-align: center;
     margin-right: 50px;
     width: 12%;
     float: right;
     box-shadow: 10px 0 10px rgba(0, 0, 0, 0.2), -10px 0 10px rgba(0, 0, 0, 0.2);
-    /* border: 2px solid blue; */
 }
 .list-online-users::before {
     content: "ONLINE NOW";
@@ -435,14 +413,10 @@ textarea {
     margin: 0 auto;
 }
 .chat-window {
-    /* overflow: auto; */
     overflow-y: scroll;
     justify-content: start;
-    /* overflow: hidden; */
     display: flex;
-    /* flex-direction: column; */
     margin: 0 auto;
-    /* max-width: 33rem; */
     max-height: 300px;
     border: 2px solid rgb(168, 163, 163);
     border-radius: 10px;
@@ -478,10 +452,8 @@ textarea {
 /* WALL */
 .feeds-container {
     margin-top: 1.8rem;
-
     width: 45%;
     margin-left: 7.5rem;
-    /* background: #c486b6; */
     box-shadow: 10px 0 10px rgba(0, 0, 0, 0.2), -10px 0 10px rgba(0, 0, 0, 0.2);
 }
 
