--- a/public/styles.css
+++ b/public/styles.css
@@ -170,6 +170,14 @@ a {
     height: 45px;
     padding: 0 30px;
 }
+
+@media screen and (max-width: 768px) {
+    .header {
+        display: block;
+        height: auto;
+        padding: 0 5px;
+    }
+}
 .header-logo-container {
     flex-grow: 2;
 }
@@ -180,8 +188,16 @@ a {
     width: 65%;
     justify-content: space-around;
 }
+
+@media screen and (max-width: 768px) {
+    .nav-bar {
+        margin-right: 0;
+        width: auto;
+    }
+}
 .link {
-    color: #fff;
+    /* color: #fff; */
+    color: black;
     cursor: pointer;
     transition: all 0.4s ease-out;
 }
@@ -219,11 +235,25 @@ a {
     cursor: pointer;
 }
 
+@media screen and (max-width: 768px) {
+    .header #header-logo {
+        width: auto;
+    }
+}
+
 /* PROFILE */
 .flex-wrapper {
     display: flex;
     margin-top: 1.8rem;
     padding-left: 3rem;
+}
+
+@media screen and (max-width: 768px) {
+    .flex-wrapper {
+        flex-direction: column;
+        align-items: center;
+        padding-left: 0;
+    }
 }
 .profile {
     margin-top: 1.8rem;
@@ -233,6 +263,14 @@ a {
     display: flex;
     box-shadow: 10px 0 10px rgba(0, 0, 0, 0.2);
 }
+
+@media screen and (max-width: 768px) {
+    .profile {
+        height: auto;
+        width: auto;
+        /* flex-direction: row; */
+    }
+}
 .img-btn-wrapper {
     max-width: 40%;
 }
@@ -240,6 +278,13 @@ a {
     max-width: 60%;
     padding-left: 1.25rem;
     margin-bottom: 2rem;
+}
+
+@media screen and (max-width: 768px) {
+    .profile-wrapper {
+        width: auto;
+        padding-left: 0;
+    }
 }
 .profile-welcome {
     font-size: 2.6vw;
@@ -297,6 +342,11 @@ a {
     cursor: pointer;
     color: #c631cc;
 }
+@media screen and (max-width: 768px) {
+    .edit-btn {
+        margin-top: 2rem;
+    }
+}
 .edit-btn:hover {
     color: #435466;
     /* color: #7e48ca; */
@@ -348,11 +398,24 @@ textarea {
 
     margin: 1rem 1.5rem 2.25rem 0;
 }
+
+@media screen and (max-width: 768px) {
+    .wannabe-container {
+        text-align: center;
+    }
+}
 .wannabe-img {
     width: 100px;
     height: 100px;
     object-fit: cover;
     object-position: top;
+}
+
+@media screen and (max-width: 768px) {
+    .wannabe-img {
+        width: 250px;
+        height: 250px;
+    }
 }
 .no-friends {
     width: 18%;
@@ -412,6 +475,12 @@ textarea {
     width: 46%;
     margin: 0 auto;
 }
+
+@media screen and (max-width: 768px) {
+    .chat-wrapper {
+        width: auto;
+    }
+}
 .chat-window {
     overflow-y: scroll;
     justify-content: start;
@@ -449,12 +518,26 @@ textarea {
     flex-direction: column;
 }
 
+@media screen and (max-width: 768px) {
+    .chat-btn {
+        width: 100%;
+        padding: 0.7rem;
+    }
+}
+
 /* WALL */
 .feeds-container {
     margin-top: 1.8rem;
     width: 45%;
     margin-left: 7.5rem;
     box-shadow: 10px 0 10px rgba(0, 0, 0, 0.2), -10px 0 10px rgba(0, 0, 0, 0.2);
+}
+
+@media screen and (max-width: 768px) {
+    .feeds-container {
+        margin-left: 0;
+        width: 90%;
+    }
 }
 
 .comment {
@@ -475,6 +558,12 @@ textarea {
 .btn-all-users {
     width: 100px;
     height: 30px;
+}
+
+@media screen and (max-width: 768px) {
+    .btn-members {
+        width: 100%;
+    }
 }
 .all-user-wrapper {
     width: 70%;
