removed BG image

--- a/public/styles.css
+++ b/public/styles.css
@@ -81,11 +81,11 @@ a {
     }
 }
 
-.background {
+/* .background {
     background: url(./assets/unicorn-sweets-hero.JPG);
     width: 100vw;
     height: auto;
-}
+} */
 
 .landing-imgage-container {
     width: 200px;
